should have renamed this file earlier

--- a/Enity/Enity.csproj
+++ b/Enity/Enity.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Horse.cs" />
-    <Compile Include="Horses.cs" />
+    <Compile Include="HorseTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
