--- a/API/API.csproj
+++ b/API/API.csproj
@@ -39,15 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HorseAPI.cs" />
+    <Compile Include="HorseApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataModel\DataModel.csproj">
+    <ProjectReference Include="..\BusinessModel\BusinessModel.csproj">
       <Project>{c43778a2-09fc-4360-8b7a-fcbed25435df}</Project>
       <Name>DataModel</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Enity\Enity.csproj">
+    <ProjectReference Include="..\Entity\Entity.csproj">
       <Project>{5f22c1eb-d0f3-40a2-8b2f-3e727d8b714b}</Project>
       <Name>Enity</Name>
     </ProjectReference>
